@@ -1,3 +1,4 @@
+- handle blowfish password encryption and use it by default (#42426)
 - allow to install bootloader on md0 (#42999)
   (regression introduced on 2004-08-05)
 
